--- a/package.json
+++ b/package.json
@@ -2,18 +2,22 @@
   "name": "elementor-cursor-review-mcp",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
 
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "dev": "ts-node src/index.ts",
-    "start": "node dist/index.js"
+    "dev": "tsc -p tsconfig.json && node dist/index.js",
+    "start": "node dist/index.js",
+    "mcp": "npm run -s build && node dist/mcp-server.js",
+    "mcp:sse": "npm run -s build && node dist/mcp-server-sse.js"
   },
   "dependencies": {
     "zod": "^3.23.8",
     "@octokit/rest": "^20.0.2",
     "dotenv": "^16.3.1",
     "gray-matter": "^4.0.3",
-    "minimatch": "^9.0.3"
+    "minimatch": "^9.0.3",
+    "@modelcontextprotocol/sdk": "^0.4.0"
   },
   "devDependencies": {
     "ts-node": "^10.9.2",
