--- a/package.json
+++ b/package.json
@@ -3,26 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "type": "module",
-
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "dev": "tsc -p tsconfig.json && node dist/index.js",
-    "start": "node dist/index.js",
-    "mcp": "npm run -s build && node dist/mcp-server.js",
-    "mcp:sse": "npm run -s build && node dist/mcp-server-sse.js"
+    "dev": "tsc -p tsconfig.json && node dist/cli.js",
+    "start": "node dist/cli.js",
+    "start:cli": "cross-env NODE_ENV=cli node dist/cli.js",
+    "start:http": "cross-env NODE_ENV=production node dist/cli.js"
   },
   "dependencies": {
-    "zod": "^3.23.8",
+    "@modelcontextprotocol/sdk": "^1.10.2",
     "@octokit/rest": "^20.0.2",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "gray-matter": "^4.0.3",
     "minimatch": "^9.0.3",
-    "@modelcontextprotocol/sdk": "^0.4.0"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/express": "^5.0.3",
+    "cross-env": "^7.0.3",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.4"
+    "typescript": "^5.7.3"
   }
 }
-
-
